--- a/data.html
+++ b/data.html
@@ -112,9 +112,9 @@
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/datavideo.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">Calliope：数据动画创作平台</a></h3>
+								<h3><a href="#">DateVideo：数据动画创作平台</a></h3>
 								<span><small>工具开发 </small> / <small> Web/VS/Git </small> / <small> <i class="icon-comment"></i> 2019-2020</small></span>
-								<p>Calliope将丰富的图表动画与基础的图文编辑功能相结合，制作优秀的数据视频。我负责构建画布操作、资源管理、音乐、文件管理系统，包含文本、图形生成、拖拽、旋转、颜色管理、风格设置等重要功能开发和界面设计</p>
+								<p>DateVideo将丰富的图表动画与基础的图文编辑功能相结合，制作优秀的数据视频。负责构建画布操作、资源管理、音乐、文件管理系统，包含文本、图形生成、拖拽、旋转、颜色管理、风格设置等重要功能开发和界面设计</p>
 								<a href="https://datavideo.idvxlab.com/" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 								<a href="https://datavideo.idvxlab.com/" target="_blank">链接</a>
 
@@ -160,10 +160,11 @@
 						<div class="blog-entry">
 							<a href="#" class="blog-img"><img src="images/smartvis.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">SmartVis：线上智能数据可视化平台</a></h3>
+								<h3><a href="#">SmartVis：线上智能数据故事可视化平台</a></h3>
 								<span><small>可视化开发 </small> / <small> D3 </small> / <small> <i class="icon-comment"></i> 2018</small></span>
 								<p>参与线上智能数据可视化平台开发，负责Barchart、Linechart可视化组件的开发</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								<a href="https://datacalliope.com/" target="_blank">链接</a>
 
 							</div>
 						</div>
