--- a/notes.html
+++ b/notes.html
@@ -93,6 +93,27 @@
 				<div class="row row-bottom-padded-md">
 
 
+					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+						<div class="blog-entry">
+							<a href="article/articleWITHdream.html" class="blog-img"><img src="images/img_bg_1.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<div class="desc">
+								<h3><a href="#">[3]想法，但希望不止于想法</a></h3>
+								<span><small>by zhang </small> / <small> 持续记录 </small> / <small> <i class="icon-comment"></i> 2022.9.7</small></span>
+								<p>
+									不时、常常、频繁地冒出很多希望，理想</br>
+									前行时，或许会感到压力</br>
+									回头观望时，可能会感觉遗憾</br>
+									...</br>
+									它们听起来完全不可靠，但是</br>
+									将他们记载在案，偶尔去实现一个</br>
+									应该也是很不错的人生动力</br>
+								</p>
+								<a href="article/articleWITHdream.html" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+								<a href="article/articleWITHdream.html" id="btn">阅读</a>
+							</div>
+						</div>
+					</div>
+
 
 					<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 						<div class="blog-entry">
@@ -116,9 +137,9 @@
 								<h3><a href="#">[1]纪念倒闭的首个个人网站</a></h3>
 								<span><small>个人网站 </small> / <small> 云/备案 </small> / <small> <i class="icon-comment"></i> 2022.9.6</small></span>
 								<p>
-									这个站点的第一篇日志将是纪念它的前身。还在大四的时候，什么都不会，硬是从0开始折腾出了Wordpress搭的个人网站，买了阿里域名，买了腾讯云服务器，做了超级麻烦的备案。
-									后来因为长期不使用、服务器费用昂贵、备案审查，各种各样的原因...网站就这样倒闭了，可惜了那些记录了很多心境的日志...
-									现在才发现，Github是多么的好用啊...
+									这个站点的第一篇日志将是纪念它的前身。</br>还在大四的时候，什么都不会，硬是从0开始折腾出了Wordpress搭的个人网站，买了阿里域名，买了腾讯云服务器，做了超级麻烦的备案。
+									后来因为长期不使用、服务器费用昂贵、备案审查，各种各样的原因...</br>网站就这样倒闭了，可惜了那些记录了很多心境的日志...
+									</br>现在才发现，Github是多么的好用啊...
 								</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
