--- a/study.html
+++ b/study.html
@@ -278,7 +278,9 @@
 							<div class="desc">
 								<h3><a href="#">PanoGo：基于室内全景导航的商场服务系统</a></h3>
 								<span><small>创新创业项目 </small> / <small> 创业/APP </small> / <small> <i class="icon-comment"></i> 2017-2018</small></span>
-								<p>项目旨在通过全景技术构建虚拟商城，打通线上与线下一体化购物，能够足不出户逛商城、到了商城有导航。项目在第三届互联网+大赛中获省铜奖、校优秀科研项目、全国创新创业年会最佳创意项目，取得软件著作权、论文各一份。</p>
+								<p>项目旨在通过全景技术构建虚拟商城，打通线上与线下一体化购物，能够足不出户逛商城、到了商城有导航。项目在第三届互联网+大赛中获省铜奖、校优秀科研项目、
+									<a href="https://news.whu.edu.cn/info/1002/52272.htm?from=timeline&isappinstalled=0" target="_blank">全国创新创业年会最佳创意项目</a>
+								，取得软件著作权、论文各一份。</p>
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
 						</div>
