--- a/other.html
+++ b/other.html
@@ -104,6 +104,20 @@
 
 						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
+								<a href="#" class="blog-img"><img src="images/animakercover.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+								<div class="desc">
+									<h3><a href="article/productAnalysis.html">记录分析与搭建过的产品架构</a></h3>
+									<span><small>信息架构 </small> / <small> 功能架构 </small> / <small> <i class="icon-comment"></i> 2019</small></span>
+									<p>珍贵的产品逻辑梳理经验，和自我创意的收缩过程</p>
+									<a href="article/productAnalysis.html" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+									<a href="article/productAnalysis.html" target="_blank">阅读</a>
+
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+							<div class="blog-entry">
 								<a href="#" class="blog-img"><img src="images/zhuse.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 								<div class="desc">
 									<h3><a href="#">批量主色识别工具</a></h3>
